test/Parser/Enum/UnterminatedEnumConstructorList.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

// CHECK: .loci:9:1: error: expected 'NAME'; got 'END'
// CHECK: .loci:9:1: error: expected 'RCURLYBRACKET'; got 'END'
enum TestEnum {

// CHECK: 2 errors generated.
